--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10664,7 +10664,7 @@ header,
 footer {
   width: 100%;
   height: 50px;
-  background-color: purple;
+  background-color: red;
   color: #fff;
   display: flex;
   justify-content: center;
