--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,7 @@
 header, footer {
   width: 100%;
   height: 50px;
-  background-color: purple;
+  background-color: red;
   color: #fff;
   display: flex;
   justify-content: center;
